[gd_scene load_steps=19 format=2]

[ext_resource path="res://Grasshopper.gd" type="Script" id=1]
[ext_resource path="res://sprites/grasshopper/grasshopper_death_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/grasshopper/grasshopper_walk_2.png" type="Texture" id=3]
[ext_resource path="res://sprites/grasshopper/grasshopper_attack_2.png" type="Texture" id=4]
[ext_resource path="res://sprites/grasshopper/grasshopper_walk_3.png" type="Texture" id=5]
[ext_resource path="res://sprites/grasshopper/grasshopper_walk_1.png" type="Texture" id=6]
[ext_resource path="res://sprites/grasshopper/grasshopper_attack_1.png" type="Texture" id=7]
[ext_resource path="res://sprites/grasshopper/grasshopper_walk_0.png" type="Texture" id=8]
[ext_resource path="res://sprites/grasshopper/grasshopper_death_0.png" type="Texture" id=9]
[ext_resource path="res://sprites/grasshopper/grasshopper_attack_0.png" type="Texture" id=10]
[ext_resource path="res://sprites/grasshopper/grasshopper_death_2.png" type="Texture" id=11]
[ext_resource path="res://sprites/grasshopper/grasshopper_death_3.png" type="Texture" id=12]
[ext_resource path="res://sprites/grasshopper/grasshopper_death_4.png" type="Texture" id=13]
[ext_resource path="res://sprites/grasshopper/grasshopper_death_5.png" type="Texture" id=14]
[ext_resource path="res://sprites/grasshopper/grasshopper_death_6.png" type="Texture" id=15]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "Death",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 7 ), ExtResource( 4 ) ],
"loop": true,
"name": "Attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "Patrol",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.40328, 7.16093 )

[node name="Grasshopper" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Grasshopper_Anim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Patrol"
flip_h = true

[node name="Grasshopper_Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.899338 )
shape = SubResource( 2 )

[node name="LedgeDetectRay" type="RayCast2D" parent="."]
position = Vector2( 8.09404, -0.749449 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="VisionRay" type="RayCast2D" parent="."]
position = Vector2( 8.09404, -2.99779 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 9.6328, 2.32516 )

[node name="HealthBar" parent="." instance=ExtResource( 16 )]
margin_left = -8.0
margin_top = -18.0
margin_right = -8.0
margin_bottom = -18.0
rect_scale = Vector2( 0.3, 0.35 )
[connection signal="animation_finished" from="Grasshopper_Anim" to="." method="_on_Grasshopper_Anim_animation_finished"]
[connection signal="frame_changed" from="Grasshopper_Anim" to="." method="_on_Grasshopper_Anim_frame_changed"]
